<resources>
    <string name="app_name">GoMeet</string>
    <string name="chat_api_key">e43k9kfvgyze</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="recommended">Recommended</string>
    <string name="events">Events</string>
    <string name="participants_button">"Manage Participants"</string>
    <string name="tag_sort">By common tags</string>
    <string name="log_in_button">Log In</string>
    <string name="post_event_button">Post</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="posts">Posts</string>
    <string name="add_post">Add a Post</string>
    <string name="new_post_placeholder_text">What\'s new ?</string>
    <string name="post_button">Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_event_button">Edit My Event</string>
    <string name="manage_invites">Manage Invites</string>
    <string name="manage_invites_pending">Pending</string>
    <string name="manage_invites_accepted">Accepted</string>
    <string name="manage_invites_refused">Refused</string>
    <string name="manage_invites_to_invite">To Invite</string>
    <string name="invite_button">Invite</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_public_event_button">Public</string>
    <string name="create_private_event_button">Private</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_image">Add Image</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_text_field">Email</string>
    <string name="password_text_field">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username_text_field">Username</string>
    <string name="confirm_password_text_field">Confirm Password</string>
    <string name="first_name_text_field">First Name</string>
    <string name="first_name_text_field_error">First Name is not valid</string>
    <string name="last_name_text_field">Last Name</string>
    <string name="last_name_text_field_error">Last Name is not valid</string>
    <string name="phone_number_text_field">Phone Number</string>
    <string name="phone_number_text_field_error">Phone Number is not valid</string>
    <string name="title_text_field">Title</string>
    <string name="location_text_field">Location</string>
    <string name="price_text_field">Price</string>
    <string name="description_text_field">Description</string>
    <string name="link_text_field">Link</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="date_picker_ok">OK</string>
    <string name="add_tags">Add Tags</string>
    <string name="create_text">Choose your audience</string>
    <string name="done">Done</string>
    <string name="open_permissions">Open permissions</string>
    <string name="settings_location">Location</string>
    <string name="settings_internet">Internet</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings_section1">Who can see your content</string>
    <string name="settings_account_privacy">Account privacy</string>
    <string name="settings_close_friends">Close friends</string>
    <string name="settings_blocked">Blocked</string>
    <string name="settings_messages">Messages</string>
    <string name="settings_section2">Your app and media</string>
    <string name="settings_suggested_content">Suggested content</string>
    <string name="settings_device_permissions">Device permissions</string>
    <string name="settings_accessibility">Accessibility</string>
    <string name="settings_language">Language</string>
    <string name="settings_more_info">More info and support</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="log_out_button">Log out</string>
    <string name="add_friend">Find User</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="messages">Messages</string>
    <string name="message_button">Message</string>
    <string name="invitations">Invitations</string>
    <string name="options">Options</string>
    <string name="share_profile">Share Profile</string>
    <string name="block">Block</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="welcome_screen_text">See what\'s happening around you right now.</string>
    <string name="register_name_country_phone_text">Tell Us More About Yourself</string>
    <string name="country_picker_error">Country is not valid</string>
    <string name="country_picker_text">Country</string>
    <string name="register_password_text">Please enter your password.</string>
    <string name="password_length_error">Your Password should be at least 6 characters</string>
    <string name="passwords_matching_error">Your Passwords should match</string>
    <string name="register_username_email_text">Welcome to GoMeet !\nPlease enter a username and an email.</string>
    <string name="username_too_long_error">Your Username Should Not Exceed 26 characters</string>
    <string name="invalid_username_error">The Username is not valid or already taken</string>
    <string name="invalid_email_error">The Email is not valid or already taken</string>
    <string name="create">Create</string>
    <string name="title_text_field_placeholder">Create</string>
    <string name="join_event_button">Join Event</string>
    <string name="leave_event_button">Leave Event</string>
</resources>