...
      state = listState,
      horizontalAlignment = Alignment.CenterHorizontally) {
        itemsIndexed(events) { _, event ->
          Column {
            val configuration = LocalConfiguration.current
            val screenWidth = configuration.screenWidthDp.dp
            Card(
                shape = RoundedCornerShape(16.dp),
                elevation = CardDefaults.cardElevation(defaultElevation = 0.dp),
                modifier =
                    Modifier.width(screenWidth / 0.6f).aspectRatio(3f / 1.75f).clickable {
                      nav.navigateToEventInfo(
                          eventId = event.eventID,
...
