...
          isMapLoaded = true
        }
      }
      delay(5000) // map is updated every 5s
    }
  }
  Scaffold(bottomBar = { BottomNavigationFun(nav) }, modifier = Modifier.testTag("ExploreUI")) {
      innerPadding ->
    val backdropState = rememberBackdropScaffoldState(BackdropValue.Concealed)
    LaunchedEffect(backdropState) { backdropState.reveal() }
    val offset by backdropState.offset
    val halfHeight = (LocalConfiguration.current.screenHeightDp - 80) / 4
    val halfHeightPx = with(LocalDensity.current) { halfHeight.dp.toPx() }
...
          horizontalAlignment = Alignment.CenterHorizontally) {
            itemsIndexed(events) { _, event ->
              Column {
                val configuration = LocalConfiguration.current
                val screenWidth = configuration.screenWidthDp.dp

                Card(
                    shape = RoundedCornerShape(16.dp),
                    elevation = CardDefaults.cardElevation(defaultElevation = 0.dp),
                    modifier =
                        Modifier.width(screenWidth / 0.6f).aspectRatio(3f / 1.75f).clickable {
                          nav.navigateToEventInfo(
                              eventId = event.eventID,
...
