...
        Box(modifier = Modifier.padding(8.dp)) {
          IconButton(
              modifier =
                  Modifier.background(
                          color = MaterialTheme.colorScheme.outlineVariant,
                          shape = RoundedCornerShape(10.dp))
                      .testTag("CreateEventButton"),
              onClick = { nav.navigateToScreen(Route.CREATE) }) {
                Icon(Icons.Filled.Add, contentDescription = "Create Event", tint = Color.White)
              }
        }
      },
      topBar = {
...
